Change Log
==========


2019-07-12 Veselin Penev [penev.veselin@gmail.com](mailto:penev.veselin@gmail.com)

* idurl fixes in contactsdb and api  (#363)
* able to read networks.json file from metadata folder if it exists
* improved index_synchronizer() automat



2019-07-11 Veselin Penev [penev.veselin@gmail.com](mailto:penev.veselin@gmail.com)

* check if key file already exists in the catalog
* py3 fix in contactsdb
* idurl fix in get_contact_identity()
* idurl bug fix in service_customer_family()



2019-07-11 Veselin Penev [penev.veselin@gmail.com](mailto:penev.veselin@gmail.com)

* protect code from idurl caching errors when identiy history is broken
* more idurl fixes in packet_out
* idurl fixes in service_identity_propagate() and service_customer_family() (#359)



2019-07-10 Veselin Penev [penev.veselin@gmail.com](mailto:penev.veselin@gmail.com)

* idurl fixes in supplier services (#358)
* catch and process "identity-url-changed" event in proxy_router()
* made packetid more unique



2019-07-08 Veselin Penev [penev.veselin@gmail.com](mailto:penev.veselin@gmail.com)

* IDURL fixes in supplier service



2019-07-07 Veselin Penev [penev.veselin@gmail.com](mailto:penev.veselin@gmail.com)

* critical bug fix in id_url
* bug fix in online_status.shutdown()
* bug fix in customer/supplier_connector.py
* solved id_url issues in proxy transport
* keep track of identity revisions in id_url and populate always latest revision
* bug fix in DHT code



2019-06-29 Veselin Penev [penev.veselin@gmail.com](mailto:penev.veselin@gmail.com)

* bug fix in index_synchronizer()
* bug fix in supplier_finder()
* reading my suppliers from DHT during identiy restore
* tried to fix issue with signature verification
* one more issue fixed in proxy_transport() (#351)
* fixed few issues in family_memeber() state machine  (#349)
* added "services/entangled-dht/node-id" setting
* populate DHT constants in networks.json
* fixed "unanswered" Identity() packets