@@ -417,7 +417,7 @@ def immediatelyCaching(idurl, timeout=10):
     def _getPageFail(x, idurl):
         global _CachingTasks
         idurl = id_url.to_original(idurl)
-        lg.err('identity %r cache failed with error: %r' % (idurl, x))
+        lg.warn('identity %r cache failed with error: %r' % (idurl, x))
         result = _CachingTasks.pop(idurl)
         if result:
             result.errback(x)
