@@ -1,4 +1,4 @@
-twisted>=19.2.1
+twisted==18.4.0
 service_identity
 pycryptodomex
 pyparsing
